--- a/backstage-templates-for-eks/s3-bucket/template-s3-bucket.yaml
+++ b/backstage-templates-for-eks/s3-bucket/template-s3-bucket.yaml
@@ -48,7 +48,7 @@ spec:
       input:
         description: Example S3 Bucket demo
         # Hard coded value for this demo purposes only.
-        repoUrl: cnoe.localtest.me:8443/gitea?repo=${{parameters.name}}
+        repoUrl: https://gitea.elamaras.people.aws.dev/gitea?repo=${{parameters.name}}
         defaultBranch: main
     - id: create-argocd-app
       name: Create ArgoCD App
