--- a/backstage-templates-for-eks/jupyterhub-on-eks/template-jupyterhub-on-eks.yaml
+++ b/backstage-templates-for-eks/jupyterhub-on-eks/template-jupyterhub-on-eks.yaml
@@ -83,7 +83,7 @@ spec:
       input:
         description: Example JupyterHub demo
         # Hard coded value for this demo purposes only.
-        repoUrl: cnoe.localtest.me:8443/gitea?repo=${{parameters.name}}
+        repoUrl: http://my-gitea-http.gitea.svc.cluster.local:3000/?repo=${{parameters.name}}
         defaultBranch: main
     - id: create-argocd-app
       name: Create ArgoCD App
