--- a/backstage-templates-for-eks/s3-bucket/template-s3-bucket.yaml
+++ b/backstage-templates-for-eks/s3-bucket/template-s3-bucket.yaml
@@ -48,7 +48,8 @@ spec:
       input:
         description: Example S3 Bucket demo
         # Hard coded value for this demo purposes only.
-        repoUrl: gitea.elamaras.people.aws.dev?repo=${{parameters.name}}
+        # repoUrl: gitea.elamaras.people.aws.dev?repo=${{parameters.name}}
+        repoUrl: http://my-gitea-http.gitea.svc.cluster.local:3000?repo=${{parameters.name}}
         defaultBranch: main
     - id: create-argocd-app
       name: Create ArgoCD App
