--- a/backstage-templates-for-eks/s3-bucket/template-s3-bucket.yaml
+++ b/backstage-templates-for-eks/s3-bucket/template-s3-bucket.yaml
@@ -49,7 +49,7 @@ spec:
         description: Example S3 Bucket demo
         # Hard coded value for this demo purposes only.
         # repoUrl: gitea.elamaras.people.aws.dev?repo=${{parameters.name}}
-        repoUrl: http://my-gitea-http.gitea.svc.cluster.local:3000?repo=${{parameters.name}}
+        # repoUrl: http://my-gitea-http.gitea.svc.cluster.local:3000?repo=${{parameters.name}}
         defaultBranch: main
     - id: create-argocd-app
       name: Create ArgoCD App
