--- a/backstage-templates-for-eks/spark-on-eks/template-data-on-eks.yaml
+++ b/backstage-templates-for-eks/spark-on-eks/template-data-on-eks.yaml
@@ -84,6 +84,10 @@ spec:
           description: Name of the role to give the administrative rights on the EKS cluster.
           default: Admin
           type: string
+        repoUrl:
+          default: gitea.elamaras.people.aws.dev
+          title: Repo URL of your Gitea Repo integrated with Backstage
+          type: string
       title: Configuration Options
   steps:
     - id: fetch-base
@@ -102,8 +106,7 @@ spec:
       action: publish:gitea
       input:
         description: Example Data on EKS demo
-        # Hard coded value for this demo purposes only.
-        repoUrl: cnoe.localtest.me:8443/gitea?repo=${{parameters.name}}
+        repoUrl: ${{parameters.repoUrl}}?repo=${{parameters.name}}
         defaultBranch: main
     - id: create-argocd-app
       name: Create ArgoCD App
@@ -113,7 +116,6 @@ spec:
         appNamespace: ${{parameters.namespace}}
         argoInstance: in-cluster
         projectName: default
-        # necessary until we generate our own cert
         repoUrl: http://my-gitea-http.gitea.svc.cluster.local:3000/giteaAdmin/${{parameters.name}}
         path: "manifests"
     - id: register
