--- a/backstage-templates-for-eks/catalog-info.yaml
+++ b/backstage-templates-for-eks/catalog-info.yaml
@@ -9,3 +9,7 @@ spec:
     - ./spark-on-eks/template-data-on-eks.yaml
     - ./eks-observability-accelerator/template-infra-monitoring.yaml
     - ./s3-bucket/template-s3-bucket.yaml
+    - ./eks-nvdia-gpu-efa/template-nvidia-gpu-efa.yaml
+    - ./eks-stateful-workload/template-stateful-workload.yaml
+    - ./eks-cost-monitoring/template-cost-monitoring.yaml
+    - ./eks-istio/template-istio.yaml
