--- a/backstage-templates-for-eks/ray-job/skeleton/manifests/ray-config.yaml
+++ b/backstage-templates-for-eks/ray-job/skeleton/manifests/ray-config.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: ray-job-code
+  name: "ray-job-code-${{values.name}}"
 data:
   python-code.py: |
-    ${{values.rayJobFile}}
+    ${{ values.rayJobFile }}
