AIML Integration to WORKSHOP

--- a/backstage-templates-for-eks/ray-job/template-ray-job.yaml
+++ b/backstage-templates-for-eks/ray-job/template-ray-job.yaml
@@ -15,7 +15,7 @@ spec:
         name:
           type: string
           description: Name of this Ray Job
-        rayJobFile:
+        ray-job-file:
           type: string
           default: "https://raw.githubusercontent.com/elamaran11/backstage-terraform-integrations/main/backstage-templates-for-eks/ray-job/sample/pytorch-sample.py"
           description: Path to your Python script
