--- a/backstage-templates-for-eks/ray-job/skeleton/manifests/ray-config.yaml
+++ b/backstage-templates-for-eks/ray-job/skeleton/manifests/ray-config.yaml
@@ -4,5 +4,5 @@ metadata:
   name: "ray-job-code-${{values.name}}"
 data:
   python-code.py: |
+    ${{ values.ray-job-file }}
     ${{ values.name }}
-    ${{ values.rayJobFile }}
