--- a/backstage-templates-for-eks/ray-serve/skeleton/catalog-info.yaml
+++ b/backstage-templates-for-eks/ray-serve/skeleton/catalog-info.yaml
@@ -3,7 +3,7 @@ apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
   name: ${{values.name | dump}}
-  description: This is for testing purposes
+  description: This is for Ray Serve
   annotations:
     backstage.io/kubernetes-label-selector: 'entity-id=${{values.name}}'
     backstage.io/kubernetes-namespace: argo
@@ -12,10 +12,6 @@ metadata:
     argo-workflows.cnoe.io/cluster-name: local
     apache-ray.cnoe.io/label-selector: env=dev,entity-id=${{values.name}}
     apache-ray.cnoe.io/cluster-name: local
-  links:
-    - url: https://cnoe.localtest.me:8443/gitea
-      title: Repo URL
-      icon: github
 spec:
   owner: guest
   lifecycle: experimental
